Updated pom.xml file.